@startuml vocabulary_word_contract

!pragma layout smetana
skinparam packageStyle rectangle
skinparam defaultFontName Inter

package "adapter.in.web.rest" {
  interface "VocabularyWordRestController" <<RestController>> {
    + createVocabularyWord(req: VocabularyWordRequest): ResponseEntity<VocabularyWordResponse>
    + updateVocabularyWord(id: UUID, req: VocabularyWordRequest): ResponseEntity<VocabularyWordResponse>
    + deleteVocabularyWord(id: UUID): ResponseEntity<Void>
    + getVocabularyWordById(id: UUID): ResponseEntity<VocabularyWordResponse>
    + importBulk(req: VocabularyWordActionRequest): ResponseEntity<OperationStatus>
  }
}

package "adapter.in.web.graphql" {
  interface "VocabularyWordGraphQLResolver" <<GraphQLResolver>> {
    + listVocabularyWords(filter: VocabularyWordFilterInput): List<VocabularyWord>
  }
}

package "application.port.in" {
  interface "VocabularyWordCommandService" <<Service>> {
    + createVocabularyWord(req: VocabularyWordRequest): VocabularyWordResponse
    + updateVocabularyWord(id: UUID, req: VocabularyWordRequest): VocabularyWordResponse
    + deleteVocabularyWord(id: UUID): void
    + importBulk(req: VocabularyWordActionRequest): OperationStatus
  }

  interface "VocabularyWordQueryService" <<Service>> {
    + getVocabularyWordById(id: UUID): VocabularyWordResponse
    + listVocabularyWords(filter: VocabularyWordFilterInput): List<VocabularyWord>
  }
}

package "adapter.out.persistence" {
  interface "VocabularyWordRepository" <<Repository>> {
    + save(entity: VocabularyWord): VocabularyWord
    + findById(id: UUID): Optional<VocabularyWord>
    + findByExample(example: Example<VocabularyWord>): List<VocabularyWord>
    + deleteById(id: UUID): void
  }
}

"VocabularyWordRestController"  ..> "VocabularyWordCommandService" : uses
"VocabularyWordRestController"  ..> "VocabularyWordQueryService" : uses
"VocabularyWordGraphQLResolver" ..> "VocabularyWordQueryService" : uses
"VocabularyWordCommandService"  ..> "VocabularyWordRepository" : uses
"VocabularyWordQueryService"    ..> "VocabularyWordRepository" : uses

@enduml
